--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mongoose": "^8.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.9",
+    "short-unique-id": "^5.2.0",
     "tailwindcss": "^4.0.6"
   }
 }
