--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "description": "",
   "dependencies": {
     "@tailwindcss/cli": "^4.0.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "mongoose": "^8.10.0",
     "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.3",
     "nodemon": "^3.1.9",
     "short-unique-id": "^5.2.0",
     "tailwindcss": "^4.0.6"
