--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3",
     "nodemon": "^3.1.9",
-    "short-unique-id": "^5.2.0",
-    "tailwindcss": "^4.0.6"
+    "short-unique-id": "^5.2.0"
   }
 }
